test/files/neg/t11591.check
t11591.scala:8: error: could not find implicit value for parameter e: Test.A
  implicitly[A]
            ^
1 error
